# nextory

./: README.md  pyproject.toml
docs/: AUTHENTICATION_FLOW.md  openapi.yaml
src/nextory/: __init__.py  client.py  config.py  exceptions.py  helpers.py  middlewares.py  models.py
src/nextory/cli/: __init__.py  select_profile.py
tests/: conftest.py  test_client.py  test_config.py  test_middlewares.py  test_models.py
