[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextory"
version = "0.1.0"
description = "Python API client for Nextory audiobook service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "mashumaro>=3.11",
    "click>=8.1.0",
]

[project.scripts]
nextory-select-profile = "nextory.cli.select_profile:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nextory"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]
